<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:stretchColumns="*"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <net.unfinishedhacks.hullstiffnessmonitor.DataView
                android:id="@+id/dataView"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginStart="10dp"
                android:layout_span="5"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/acc_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/acc_title" />

            <TextView
                android:id="@+id/acc_x"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/txt_X" />

            <TextView
                android:id="@+id/acc_y"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/txt_Y" />

            <TextView
                android:id="@+id/acc_z"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/txt_Z" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/vis_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/vis_title" />
            <TextView
                android:id="@+id/dot_x"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/txt_X" />

            <TextView
                android:id="@+id/dot_y"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/txt_Y" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/bat_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/bat_title" />

            <TextView
                android:id="@+id/bat_v"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/batV" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calib_btn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Calibrate"
                android:layout_span="2" />

            <Button
                android:id="@+id/start_btn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_span="3"
                android:text="Start" />
        </TableRow>
    </TableLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>